common/dex/overlays/oauth2-proxy/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  namespace: auth
spec:
  template:
    spec:
      containers:
      - name: dex
        image: avnshrai/dex-with-ca:v1
